[project]
name = "transformer-studio"
version = "0.1.0"
description = "Notebook environment for transformer experiments"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "black[jupyter]>=26.0",
    "ipykernel>=6.29",
    "jupyterlab>=4.2",
    "matplotlib>=3.9",
    "numpy>=1.26",
    "torch>=2.2",
    "torchvision>=0.17",
    "tqdm",
    "torchviz",
    "pandas",
    "scikit-learn",
    "transformers"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.black]
target-version = ["py312"]
